--- a/llm-engine/requirements.txt
+++ b/llm-engine/requirements.txt
@@ -1,7 +1,6 @@
 fastapi==0.103.1
 uvicorn==0.23.2
 pydantic==2.3.0
-ctransformers==0.2.27
 openai==0.28.0
 python-dotenv==1.0.0
 transformers==4.34.0
@@ -11,4 +10,5 @@ torch==2.0.1
 peft==0.5.0
 accelerate==0.23.0
 bitsandbytes==0.41.1
+llama-cpp-python==0.2.19
 loguru==0.7.0
