--- a/vector-db/Dockerfile
+++ b/vector-db/Dockerfile
@@ -9,6 +9,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
+# Install huggingface-hub first with specific version to avoid conflicts
+RUN pip install --no-cache-dir huggingface-hub==0.16.4
+# Install remaining requirements
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
