--- a/vector-db/requirements.txt
+++ b/vector-db/requirements.txt
@@ -3,6 +3,7 @@ uvicorn==0.23.2
 pydantic==2.3.0
 python-dotenv==1.0.0
 chromadb==0.4.15
+huggingface-hub==0.16.4
 sentence-transformers==2.2.2
 numpy==1.24.3
 loguru==0.7.0
