--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,47 +6,49 @@ build-backend = "setuptools.build_meta"
 name = "eureka"
 version = "0.1.0"
 description = "Enterprise RAG System"
-requires-python = ">=3.9"  # Updated to be compatible with numpy 1.26.0
+requires-python = ">=3.10"  # Updated to be compatible with numpy 1.26.0
 license = "MIT"  # Changed to string format to fix deprecation warning
 readme = "README.md"
 authors = [
     {name = "Eureka Team"},
 ]
 dependencies = [
-    # Common dependencies
-    "fastapi==0.103.1",
-    "uvicorn==0.23.2",
-    "pydantic==2.3.0",
-    "python-dotenv==1.0.0",
-    "loguru==0.7.0",
-    "httpx==0.25.0",
-    "requests==2.31.0",
-    "python-multipart==0.0.6",
-    # LLM Engine dependencies
-    "openai==0.28.0",
-    "transformers==4.34.0",
-    "sentencepiece==0.1.99",
-    "torch>=2.1.0", # Updated to a version compatible with Python 3.12
-    "peft==0.5.0",
-    "accelerate==0.23.0",
-    "bitsandbytes==0.41.1",
-    # Vector DB dependencies
-    "chromadb==0.4.15",
-    "sentence-transformers==2.2.2",
-    "numpy>=1.26.0", # Updated to a version compatible with Python 3.12
-    "tqdm==4.66.1",
-    # MCP Server dependencies
-    "atlassian-python-api==3.41.1",
-    "boto3==1.28.53",
-    "jsonrpcserver==5.0.9",
-    "markdown==3.5",
-    "bs4==0.0.1",
-    "PyPDF2==3.0.1",
-    "python-docx==0.8.11",
-    # RAG Orchestrator dependencies
-    "jinja2==3.1.2",
-    "aiohttp>=3.9.0", # Updated to a version compatible with Python 3.12
+    "fastapi>=0.115.12",
     "llama-cpp-python>=0.3.8",
+    # Common dependencies
+    # "fastapi==0.103.1",
+    # "uvicorn==0.23.2",
+    # "pydantic==2.3.0",
+    # "python-dotenv==1.0.0",
+    # "loguru==0.7.0",
+    # "httpx==0.25.0",
+    # "requests==2.31.0",
+    # "python-multipart==0.0.6",
+    # LLM Engine dependencies
+    # "openai==0.28.0",
+    # "transformers==4.34.0",
+    # "sentencepiece==0.1.99",
+    # "torch>=2.1.0", # Updated to a version compatible with Python 3.12
+    # "peft==0.5.0",
+    # "accelerate==0.23.0",
+    # "bitsandbytes==0.41.1",
+    # Vector DB dependencies
+    # "chromadb==0.4.15",
+    # "sentence-transformers==2.2.2",
+    # "numpy>=1.26.0", # Updated to a version compatible with Python 3.12
+    # "tqdm==4.66.1",
+    # MCP Server dependencies
+    # "boto3==1.28.53",
+    # "jsonrpcserver==5.0.9",
+    # "markdown==3.5",
+    # "bs4==0.0.1",
+    # "PyPDF2==3.0.1",
+    # "python-docx==0.8.11",
+    "mcp[cli]",
+    # RAG Orchestrator dependencies
+    # "jinja2==3.1.2",
+    # "aiohttp>=3.9.0", # Updated to a version compatible with Python 3.12
+    "rich>=14.0.0",
 ]
 
 [project.optional-dependencies]
@@ -62,7 +64,7 @@ dev = [
 
 [tool.setuptools]
 # Remove src-layout configuration
-packages = ["cli", "config", "models", "llm-engine", "mcp-server", "rag-orchestrator", "vector-db"]
+packages = ["cli", "config", "models", "llm", "mcp", "orchestrator", "api-server"]
 
 [tool.black]
 line-length = 88
